fix:hero title in a row on mobile devices

--- a/src/components/ui/modal/modal.module.css
+++ b/src/components/ui/modal/modal.module.css
@@ -152,7 +152,8 @@
 
 .modal_mobile {
   padding-block: 3.86vw;
-  /* padding-inline: 3.86vw; */
+  padding-inline: 3.86vw;
+  max-height: 100dvh;
 }
 
 .modal__button_close_large-screen {
