--- a/src/components/ui/paginator/paginator.module.css
+++ b/src/components/ui/paginator/paginator.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: row;
   gap: 4px;
-  /* position: absolute;
-  top: 97%; */
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
+.paginator_widthed {
+  max-width: calc(100vw - 2 * 16px - 202px - 2 * 60px);
 }
