--- a/src/components/ui/point/point.module.css
+++ b/src/components/ui/point/point.module.css
@@ -1,5 +1,6 @@
 .point {
   width: 4px;
+  min-width: 4px;
   height: 4px;
   margin: 2px;
   border-radius: 100px;
@@ -8,6 +9,7 @@
 
 .point_current {
   width: 12px;
+  min-width: 12px;
   height: 6px;
   margin-inline: 0;
   margin-block: 1px;
